--- a/ERP/templates/partials/left-sidebar.html
+++ b/ERP/templates/partials/left-sidebar.html
@@ -445,6 +445,8 @@
                         <li><a href="{% url 'inventory:unit_list' %}">Units</a></li>
                         <li><a href="{% url 'inventory:productunit_list' %}">Product Units</a></li>
                         <li><a href="{% url 'inventory:pricelist_list' %}">Price Lists</a></li>
+                                                <li><a href="{% url 'inventory:vendor_price_history_list' %}">Vendor Price History</a></li>
+                                                <li><a href="{% url 'inventory:customer_price_history_list' %}">Customer Price History</a></li>
                         <li><a href="{% url 'inventory:picklist_list' %}">Pick Lists</a></li>
                         <li><a href="{% url 'inventory:shipment_list' %}">Shipments</a></li>
                         <li><a href="{% url 'inventory:rma_list' %}">RMAs</a></li>
