--- a/ERP/templates/purchasing/landed_cost_form_page.html
+++ b/ERP/templates/purchasing/landed_cost_form_page.html
@@ -19,7 +19,7 @@
           <h5 class="mb-1">Allocate Landed Cost</h5>
           <p class="text-muted mb-0">Invoice {{ invoice }} - {{ invoice.supplier.display_name }} - {{ invoice.invoice_date }}</p>
         </div>
-        <span class="badge bg-light text-dark">Invoice Total {{ invoice.currency.currency_code }} {{ invoice.total_amount }}</span>
+        <span class="badge bg-light text-dark">Invoice Total {{ invoice.currency.currency_code }} {{ invoice.total }}</span>
       </div>
       <div class="row g-3">
         <div class="col-md-3">
